src/test/ui/type-alias-impl-trait/bound_reduction2.stderr
error[E0282]: type annotations needed
  --> $DIR/bound_reduction2.rs:17:5
   |
LL |     ()
   |     ^^ cannot infer type

error: could not find defining uses
  --> $DIR/bound_reduction2.rs:9:15
   |
LL | type Foo<V> = impl Trait<V>;
   |               ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
